@@ -216,6 +216,10 @@ Core and builtins
 Extension Modules
 -----------------
 
+- Use Win32 API to implement os.stat/fstat. As a result, subsecond timestamps
+  are reported, the limit on path name lengths is removed, and stat reports
+  WindowsError now (instead of OSError).
+
 - Add bsddb.db.DBEnv.set_tx_timestamp allowing time based database recovery.
 
 - Bug #1413192, fix seg fault in bsddb if a transaction was deleted
